crates/nash-can/src/snapshots/nash_can__module__tests__let_destruct_list_pattern_binds_names.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf w = let [a, b] = w in a\n"
---
Module {
    tests: [],
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 3,
                        },
                        end: Position {
                            line: 3,
                            column: 4,
                        },
                    },
                    value: Var(
                        "w",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 7,
                    },
                    end: Position {
                        line: 4,
                        column: 1,
                    },
                },
                value: LetDestruct {
                    pattern: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 11,
                            },
                            end: Position {
                                line: 3,
                                column: 17,
                            },
                        },
                        value: List(
                            [
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 12,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 13,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 3,
                                            column: 15,
                                        },
                                        end: Position {
                                            line: 3,
                                            column: 16,
                                        },
                                    },
                                    value: Var(
                                        "b",
                                    ),
                                },
                            ],
                        ),
                    },
                    value: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 20,
                            },
                            end: Position {
                                line: 3,
                                column: 21,
                            },
                        },
                        value: VarLocal(
                            "w",
                        ),
                    },
                    body: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 25,
                            },
                            end: Position {
                                line: 3,
                                column: 26,
                            },
                        },
                        value: VarLocal(
                            "a",
                        ),
                    },
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
